tests/ui/lifetimes/raw/use-of-undeclared-raw-lifetimes.stderr
error[E0261]: use of undeclared lifetime name `'r#fn`
  --> $DIR/use-of-undeclared-raw-lifetimes.rs:6:21
   |
LL | fn a(_: dyn Trait + 'r#fn) {
   |                     ^^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'r#fn` here
   |
LL | fn a<'r#fn>(_: dyn Trait + 'r#fn) {
   |     +++++++

error[E0261]: use of undeclared lifetime name `'r#fn`
  --> $DIR/use-of-undeclared-raw-lifetimes.rs:13:9
   |
LL |     a: &'r#fn str,
   |         ^^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'r#fn` here
   |
LL | struct Test<'r#fn> {
   |            +++++++

error[E0261]: use of undeclared lifetime name `'r#fn`
  --> $DIR/use-of-undeclared-raw-lifetimes.rs:18:32
   |
LL |   where T: for<'a> Trait1<T> + 'r#fn { }
   |                                ^^^^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'r#fn` lifetime
   |
LL -   where T: for<'a> Trait1<T> + 'r#fn { }
LL +   where for<'r#fn, 'a> T: Trait1<T> + 'r#fn { }
   |
help: consider introducing lifetime `'r#fn` here
   |
LL | trait Trait1<'r#fn, T>
   |              ++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0261`.
